--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,21 @@
-APP_NAME=Laravel
+# App
+APP_NAME=Jawb
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gFa9XBff+/C7plsWfplJaVWCXr4ncbDF1RRfBfUxXmc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://local.jawb-admin/
+FRONTEND_URL=https://jawib.app
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+# Database
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=jawb-admin
+DB_USERNAME=root
+DB_PASSWORD=
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-BCRYPT_ROUNDS=12
-
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=cr8
-# DB_USERNAME=root
-# DB_PASSWORD=
-
+# SESSION_DRIVER=redis
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -33,32 +23,71 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=local # local|public|do
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+# Redis Cache
+CACHE_STORE=database # database|redis
 CACHE_PREFIX=
-
 MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+# Mail
+MAIL_MAILER=smtp
+MAIL_HOST='arm.boxsecured.com'
+MAIL_PORT=587
+MAIL_USERNAME='smtp@trywebsight.com'
+MAIL_PASSWORD='XXXXXXXXXXXXX'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="${MAIL_USERNAME}"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# Digital Ocean storage
+DO_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxx
+DO_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxx
+DO_DEFAULT_REGION=fra1
+DO_BUCKET=jawib
+DO_USE_PATH_STYLE_ENDPOINT=true
+DO_ENDPOINT=https://fra1.digitaloceanspaces.com
+DO_CDN_ENDPOINT=https://jawib.fra1.cdn.digitaloceanspaces.com
 
-VITE_APP_NAME="${APP_NAME}"
+# Tap Payment
+TAP_SECRET_KEY="sk_test_XKokBfNWv6FIYuTMg5sLPjhJ"
+
+# OneSignal
+ONESIGNAL_APP_ID=
+ONESIGNAL_REST_API_KEY=
+ONESIGNAL_USER_AUTH_KEY=
+
+# Kwt sms
+KWT_SMS_USERNAME=xxxxxxx
+KWT_SMS_PASSWORD=xxxxxxx
+KWT_SMS_SENDER="${APP_NAME}"
+
+# social login
+GOOGLE_CLIENT_ID=640643392650-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+GOOGLE_CLIENT_SECRET=GOCSPX-xxxxxxxxxxxxxxxxxxxxx
+GOOGLE_REDIRECT_URL="${APP_URL}/api/auth/social/google/callback"
+
+# APPLE CREDENTIALS CONFIG
+APPLE_CLIENT_ID=apple_client_id
+APPLE_CLIENT_SECRET=apple_client_secret
+APPLE_REDIRECT_URL=https://your-callback-url.com/login/apple/callback
+
+# Locale
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+APP_MAINTENANCE_DRIVER=file # file|database
+
+# Hashing
+BCRYPT_ROUNDS=12
+
+# Log
+LOG_CHANNEL=stack
+LOG_STACK=single
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
