increse client_max_body_size 50 m

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -8,6 +8,8 @@ server {
     index index.php index.html;
     charset utf-8;
 
+    client_max_body_size 50M;
+
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
@@ -28,7 +30,7 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
 	}
-    
+
     location ~ /\.(?!well-known).* {
         deny all;
     }
